retrieveUnpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>The key in a key/value relationship of a list-of-values (LOV) lookup table.  The Code should be unique within a record type.</description>
        <label>Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether an account is logically deleted.  Physical deletion may not be possible if the account is referenced elsewhere.</description>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization_Nickname__c</fullName>
        <description>Local or unofficial organization name (as opposed to the Organization Name and Description that come from the Federal Personnel and Payroll System (FPPS).  This may be a nickname or shortened name used within a region or program office.</description>
        <inlineHelpText>Unofficial name, or nickname, of the organization used locally, e.g., within a region or program office</inlineHelpText>
        <label>Organization Nickname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <description>Short description.  As a text field instead of text area, it can be viewed in a list.  The standard Description field cannot display in table format.</description>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Type__c</fullName>
        <label>Site Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts_User2</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Short_Description__c</field>
            <operation>contains</operation>
            <value>permit</value>
        </filters>
        <label>All Organizations</label>
    </listViews>
    <listViews>
        <fullName>FRS</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Code__c</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>County__c</columns>
        <columns>Site_Type__c</columns>
        <columns>Deleted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.FRS</value>
        </filters>
        <label>FRS</label>
    </listViews>
    <listViews>
        <fullName>HR_Orgs</fullName>
        <columns>Code__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Short_Description__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>Deleted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.HR_Org</value>
        </filters>
        <label>HR Orgs</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>Office</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Code__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Deleted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Office</value>
        </filters>
        <label>Office</label>
    </listViews>
    <listViews>
        <fullName>RPIO</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Code__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Deleted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.RPIO</value>
        </filters>
        <label>RPIO</label>
    </listViews>
    <listViews>
        <fullName>Region</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Code__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Deleted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Region</value>
        </filters>
        <label>Region</label>
    </listViews>
    <listViews>
        <fullName>State</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Code__c</columns>
        <columns>Short_Description__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>Deleted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.State</value>
        </filters>
        <label>State</label>
    </listViews>
    <recordTypes>
        <fullName>Dummy_Account</fullName>
        <active>true</active>
        <description>Dummy accounts</description>
        <label>Dummy Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>FRS</fullName>
        <active>true</active>
        <description>Facility Registration system (FRS).  Draft.  Contact hinds.timothy@epa.gov for more info</description>
        <label>FRS</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Accounts</fullName>
        <active>true</active>
        <label>General Accounts</label>
    </recordTypes>
    <recordTypes>
        <fullName>HR_Org</fullName>
        <active>true</active>
        <description>HR Organizations</description>
        <label>HR Org</label>
    </recordTypes>
    <recordTypes>
        <fullName>Office</fullName>
        <active>true</active>
        <description>RPIOs which are divsions, not regions</description>
        <label>Office</label>
    </recordTypes>
    <recordTypes>
        <fullName>RPIO</fullName>
        <active>true</active>
        <description>Responsible Planning and Implementation Office</description>
        <label>RPIO</label>
    </recordTypes>
    <recordTypes>
        <fullName>Region</fullName>
        <active>true</active>
        <description>EPA Regions</description>
        <label>Region</label>
    </recordTypes>
    <recordTypes>
        <fullName>State</fullName>
        <active>true</active>
        <description>States and Territories</description>
        <label>State/Territory</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Code_reqd</fullName>
        <active>true</active>
        <description>Code required for some record types</description>
        <errorConditionFormula>and( or( RecordType.Name = &apos;Division&apos;, RecordType.Name = &apos;RPIO&apos;, RecordType.Name = &apos;Region&apos;, RecordType.Name = &apos;HR Org&apos;, RecordType.Name = &apos;State/Territory&apos; , RecordType.Name = &apos;State&apos;),  ISNULL( Code__c ))</errorConditionFormula>
        <errorDisplayField>Code__c</errorDisplayField>
        <errorMessage>Code is required</errorMessage>
    </validationRules>
</CustomObject>